fixed mobile menu overflow

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -9,7 +9,7 @@
 }
 .container.main_nav {
   background-color: transparent;
-  padding: 1.6rem 0;
+  padding: 2.6rem 0;
 }
 
 .inner_container {
